<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/spiice"
        android:textColor="@color/black"
        android:textSize="90sp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="22dp"
        android:text="@string/discover" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12sp"
        android:text="@string/you_have_an_account_log_in"
        android:textSize="20sp" />

</RelativeLayout>

