<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/skiplogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:clickable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/skip"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/titletextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="199sp"
        android:gravity="left"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/purple_200"
        android:hint="email"
        android:minHeight="48dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/purple_200"
        android:hint="password"
        android:minHeight="48dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/input3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/purple_200"
        android:hint="name"
        android:minHeight="48dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/input4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/purple_200"
        android:hint="surname"
        android:minHeight="48dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/signbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@color/purple_200"
        android:backgroundTint="@color/teal_200"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12sp"
        android:text="@string/you_have_an_account_log_in"
        android:clickable="true"
        android:textSize="20sp" />

</LinearLayout>